# triton

./: .gitignore  CLAUDE.md  CLAUDE_SYSTEM_PROMPT.md  CMakeLists.txt  COMPREHENSIVE_IKOS_REPORT.md  IKOS_ANALYSIS_REPORT.md  IKOS_FIXES_COMPLETE.md  KICKOFF.md  Makefile  README.md  README_IKOS_USGAE.md  SKILL.md  analyze_full_project.sh  analyze_triton.sh  ikos_analyze.sh  ikos_analyze_all.sh  ikos_analyze_final.sh  ikos_direct.sh  ikos_full_analysis.sh  ikos_quick_scan.sh  ikos_wrapper.sh  output.db  run_complete_ikos.sh  run_comprehensive_analysis.sh  run_ikos.sh  test_ikos.sh  test_simple.c  test_single_ikos.sh
analysis/: CMakeLists_host.txt  Makefile  pico_stubs.h  pico_stubs_fixed.h  pwm_capture.pio.h
ci/: install_hooks.sh  p10_check.py  run_ci.sh
ikos_reports/: COMPLETE_ANALYSIS_20260106_132123.md  COMPLETE_ANALYSIS_20260106_132233.md  FINAL_ANALYSIS_20260106_132442.md  IKOS_SUMMARY_20260106_131549.md  ballast_ctrl_20260106_131328.txt  ballast_ctrl_20260106_131551_analysis.txt  ballast_ctrl_test.txt  battery_20260106_131328.txt  battery_20260106_131405_report.txt  battery_20260106_131438_analysis.txt  battery_20260106_131549_analysis.txt  battery_20260106_132327_analysis.txt  battery_20260106_132338_analysis.txt  battery_final.txt  battery_test.txt  depth_ctrl_20260106_131328.txt  depth_ctrl_20260106_131551_analysis.txt  depth_ctrl_test.txt  display_test.txt  emergency_20260106_131328.txt  emergency_20260106_131550_analysis.txt  emergency_20260106_132233.txt  emergency_quick.txt  emergency_test.txt  handshake_test.txt  imu_20260106_131553_analysis.txt  imu_test.txt  leak_20260106_121141.txt  leak_20260106_131328.txt  leak_20260106_131549_analysis.txt  leak_test.txt  log_test.txt  main_test.txt  pid_20260106_131550_analysis.txt  (+25 more)
(+77 files in other folders)
